# resize-slice-rs

./: .travis.yml  Cargo.toml  README.md  search-index.js
implementors/resize_slice/: trait.SliceExt.js
resize_slice/: ResizeSlice.t.html  index.html  trait.ResizeSlice.html  trait.SliceExt.html  trait.VecExt.html
src/: lib.rs
src/resize_slice/: lib.rs.html
