[package]
name = "resize-slice"
version = "0.1.2"
authors = ["arcnmx"]

description = "Shrink slice references"
documentation = "http://arcnmx.github.io/resize-slice-rs/resize_slice/"
repository = "https://github.com/arcnmx/resize-slice-rs"
readme = "README.md"
keywords = ["slice", "resize"]
license = "MIT"

[dependencies]
uninitialized = "0.0"
smallvec = { version = "0.1", optional = true }
